Trying to fix blurriness on mobile background

--- a/httpdocs/_css/roadtrip.css
+++ b/httpdocs/_css/roadtrip.css
@@ -398,6 +398,10 @@ button {
 
 /* Mobile */
 @media screen and (max-width:767px) {
+  #html {
+    background-size:4500px 4500px;
+  }
+
   #header {
     border:none;
     margin-bottom:60px;
